# kernreg

./: .darglint  .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: continuous_integration.yml
docs/: api_reference.rst  conf.py  index.rst  reference.rst  refs.bib  requirements.txt
src/kernreg/: __init__.py  bandwidth_selection.py  config.py  funcs_to_jit.py  linear_binning.py  locpoly.py  plot.py  residual_squares_criterion.py  smooth.py  utils.py  visualization.py  visualize.py
tests/: __init__.py  conftest.py  test_bandwidth_selection.py  test_binning.py  test_locpoly.py  test_plot.py
tests/resources/: mcycle_expect_auto_bw.csv  mcycle_expect_degree_3.csv  mcycle_expect_user_bw.csv  motorcycle.dta  motorcycle_expected_auto_bw.csv  toy_expect_default.csv
