[tool.poetry]
name = "kernreg"
version = "0.0.5"
description = "Tool for non-parametric curve fitting using local polynomials."
authors = ["Sebastian Gsell <sebastian.gsell93@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/segsell/kernreg"
keywords = ["kernel-regression",
    "non-parametric",
    "curve-fitting",
    "local-polynomials"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.9"
numpy = "^1.19.5"
numba = "^0.52.0"
pandas = "^1.2.0"
matplotlib = "^3.3.3"
mypy-extensions = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
coverage = {extras = ["toml"], version = "^5.3.1"}
pytest-cov = "^2.10.1"
PyYAML = "^5.3.1"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-import-order = "^0.18.1"
safety = "^1.10.2"
mypy = "^0.790"
pytype = {version = "^2021.1.8", python = "3.8"}
typeguard = "^2.10.0"
flake8-annotations = "^2.5.0"
flake8-docstrings = "^1.5.0"
darglint = "^1.5.8"
Sphinx = "^3.4.3"
sphinx-autodoc-typehints = "^1.11.1"
sphinxcontrib-bibtex = "^2.1.4"
codecov = "^2.1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["kernreg"]

[tool.coverage.report]
show_missing = true
fail_under = 100
